--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ src/camera.h src/camera.cpp
 src/collider.h src/collider.cpp 
 src/player.h src/player.cpp 
 src/characteristic.h src/characteristic.cpp 
+src/location_object.h src/location_object.cpp 
 
 src/EAGL/stb_image.h src/EAGL/stb_image.cpp 
 
@@ -17,7 +18,8 @@ src/EAGL/shader.h src/EAGL/shader.cpp
 src/EAGL/texture.h src/EAGL/texture.cpp 
 src/EAGL/render.h src/EAGL/render.cpp 
 src/EAGL/transform.h src/EAGL/transform.cpp 
-src/EAGL/rect.h src/EAGL/rect.cpp
+src/EAGL/rect.h src/EAGL/rect.cpp 
+src/EAGL/sprite.h src/EAGL/sprite.cpp 
 )
 
 add_subdirectory(external/glad)
