--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ src/collider.h src/collider.cpp
 src/player.h src/player.cpp 
 src/characteristic.h src/characteristic.cpp 
 src/location_object.h src/location_object.cpp 
+src/interface.h src/interface.cpp 
+src/load_assets.h src/load_assets.cpp 
 
 src/EAGL/stb_image.h src/EAGL/stb_image.cpp 
 
