--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ src/characteristic.h src/characteristic.cpp
 src/location_object.h src/location_object.cpp 
 src/interface.h src/interface.cpp 
 src/load_assets.h src/load_assets.cpp 
+src/collision.h src/collision.cpp 
 
 src/EAGL/stb_image.h src/EAGL/stb_image.cpp 
 
