--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ src/collider.h src/collider.cpp
 src/collision.h src/collision.cpp 
 src/interface.h src/interface.cpp 
 src/body.h src/body.cpp 
+src/GraphicResource.h src/GraphicResource.cpp 
 
 src/EAGL/stb_image.h src/EAGL/stb_image.cpp 
 
