--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ src/GraphicResource.h src/GraphicResource.cpp
 src/Player.h src/Player.cpp 
 src/World.h src/World.cpp 
 src/Structure.h src/Structure.cpp 
+src/DBM.h src/DBM.cpp 
 
 src/EAGL/stb_image.h src/EAGL/stb_image.cpp 
 
